[package]
name = "autoclone-tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
autoclone = { workspace = true }

[lib]

[lints]
workspace = true
