[package]
name = "autoclone"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "A simple macro to clone variables before passing them into a `move` closure or async block."
readme = "README.md"
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
keywords = ["macro", "clone", "utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "visit-mut"] }

[dev-dependencies]
clone-macro = "0.1.0"

[lints]
workspace = true
