load("//bazel/client_server_modules:crate_client_server.bzl", "crate_client_server_module")

package(default_visibility = ["//visibility:public"])

crate_client_server_module(
    name = "crates_server",
    server_fn_deps = [
        "@crates//:axum",
        "@crates//:http-body-util",
        "@crates//:hyper",
        "@crates//:inventory",
        "@crates//:tokio",
        "@crates//:tower",
        "@crates//:tower-layer",
    ],
    server_fn_features = [
        "axum",
        "axum-no-default",
        "browser",
        "generic",
        "ssr",
    ],
)

crate_client_server_module(
    name = "crates_client",
    server_fn_features = [
        "browser",
    ],
)

crate_client_server_module(
    name = "crates_opt_server",
    server_fn_deps = [
        "@crates//:axum",
        "@crates//:http-body-util",
        "@crates//:hyper",
        "@crates//:inventory",
        "@crates//:tokio",
        "@crates//:tower",
        "@crates//:tower-layer",
    ],
    server_fn_features = [
        "axum",
        "axum-no-default",
        "browser",
        "generic",
        "ssr",
    ],
    tracing_features = [
        "max_level_info",
        "release_max_level_info",
    ],
)

crate_client_server_module(
    name = "crates_opt_client",
    server_fn_features = [
        "browser",
    ],
    tracing_features = [
        "max_level_info",
        "release_max_level_info",
    ],
)
