load("//bazel/client_server_modules:crate_client_server.bzl", "crate_client_server_module")

package(default_visibility = ["//visibility:public"])

SERVER_FN_SERVER_DEPS = [
    "@crates//:axum",
    "@crates//:http-body-util",
    "@crates//:hyper",
    "@crates//:inventory",
    "@crates//:tokio",
    "@crates//:tower",
    "@crates//:tower-layer",
]

SERVER_FN_CLIENT_FEATURES = [
    "browser",
]

SERVER_FN_SERVER_FEATURES = [
    "axum",
    "axum-no-default",
    "browser",
    "generic",
    "ssr",
]

TRACING_OPT_FEATURES = [
    "max_level_info",
    "release_max_level_info",
]

crate_client_server_module(
    name = "crates_server_plain",
    server_fn_deps = SERVER_FN_SERVER_DEPS,
    server_fn_features = SERVER_FN_SERVER_FEATURES,
)

crate_client_server_module(
    name = "crates_client_plain",
    server_fn_features = SERVER_FN_CLIENT_FEATURES,
)

crate_client_server_module(
    name = "crates_server_opt",
    server_fn_deps = SERVER_FN_SERVER_DEPS,
    server_fn_features = SERVER_FN_SERVER_FEATURES,
    tracing_features = TRACING_OPT_FEATURES,
)

crate_client_server_module(
    name = "crates_client_opt",
    server_fn_features = SERVER_FN_CLIENT_FEATURES,
    tracing_features = TRACING_OPT_FEATURES,
)
