crates_opt_server = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crates_opt_server.annotation(
    crate = "server_fn",
    crate_features = [
        "axum",
        "axum-no-default",
        "browser",
        "generic",
        "ssr",
    ],
    repositories = ["crates_opt_server"],
    deps = [
        "@crates//:axum",
        "@crates//:http-body-util",
        "@crates//:hyper",
        "@crates//:inventory",
        "@crates//:tokio",
        "@crates//:tower",
        "@crates//:tower-layer",
    ],
)
crates_opt_server.annotation(
    crate = "tracing",
    crate_features = [
        "max_level_info",
        "release_max_level_info",
    ],
    repositories = ["crates_opt_server"],
)
crates_opt_server.from_cargo(
    name = "crates_opt_server",
    cargo_lockfile = "//bazel:crates_opt_server.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crates_opt_server, "crates_opt_server")
