[package]
name = "crate_universe_deps"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]

[dependencies]
axum-extra = { workspace = true, features = ["cookie"] }
base64 = { workspace = true }
bitflags = { workspace = true }
clap = { workspace = true }
cms = { workspace = true }
const_format = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
hickory-client = { workspace = true }
http-body-util = { workspace = true }
humantime = { workspace = true }
hyper = { workspace = true }
include_directory = { workspace = true }
instant-acme = { workspace = true }
inventory = { workspace = true }
jsonwebtoken = { workspace = true }
libc = { workspace = true }
mime_guess = { workspace = true }
nix = { workspace = true, features = ["signal"] }
notify = { workspace = true }
oid-registry = { workspace = true }
openssl = { workspace = true }
pbkdf2 = { workspace = true }
pin-project = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rcgen = { workspace = true }
regex = { workspace = true }
rpassword = { workspace = true }
rsass = { workspace = true }
rsass-macros = { workspace = true }
rustls-native-certs = { workspace = true }
scopeguard = { workspace = true }
serde_yaml_ng = { workspace = true }
serde-wasm-bindgen = { workspace = true }
sha2 = { workspace = true }
simple_asn1 = { workspace = true }
static_assertions = { workspace = true }
stylance = { workspace = true }
tantivy = { workspace = true }
thiserror = { workspace = true }
tls-parser = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = [
  "fs",
  "sensitive-headers",
  "trace",
] }
tower-layer = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true, features = ["futures-03"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-subscriber-wasm = { workspace = true }
unescaper = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-streams = { workspace = true }
x509-parser = { workspace = true }
web-sys = { workspace = true, features = [
  "Clipboard",
  "ClipboardEvent",
  "DataTransfer",
  "Document",
  "DragEvent",
  "Element",
  "FocusEvent",
  "Headers",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "InputEvent",
  "KeyboardEvent",
  "MouseEvent",
  "Navigator",
  "Performance",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
] }
