load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "feature-deps",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//utils/nameth/nameth",
        "@crates//:clap",
        "@crates//:heck",
        "@crates//:thiserror",
        "@crates//:toml",
    ],
)
